--- a/styles.css
+++ b/styles.css
@@ -766,8 +766,8 @@
 @media (max-width: 1280px) {
     .header {
         display: flex;
-        height: 35vh;
-        width: 100vh;
+        height: 60vh;
+        width: 100vw;
         flex-direction: column; /* Stack elements vertically */
         justify-content: flex-start; /* Align items at the top */
         background-size: cover; /* Ensure image covers header */
@@ -791,7 +791,65 @@
 }
 
 /* Desktop: 1024×768 */
+
+@media (max-width: 1024px) and (max-height: 600px) {
+    .header {
+        display: flex;
+        height: 35vh;
+        width: 100vw;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 2.5rem;
+        text-align: center;
+      }
+      .logo {
+        width: 5rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        margin-right: 23rem; /* Keep margin for positioning */
+        width: auto; /* Allow for proper width adjustment */
+      }
+}
+
 @media (max-width: 1024px) {
+    .header {
+        display: flex;
+        height: 35vh;
+        width: 100vw;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 2.5rem;
+        text-align: center;
+      }
+      .logo {
+        width: 5rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        margin-right: 0.5rem; /* Keep margin for positioning */
+        width: auto; /* Allow for proper width adjustment */
+      }
+}
+
+/* Tablet: 768×1024, 601×962 */
+
+ /* Galaxy Z Fold 5 - Folded */
+@media (max-width: 690px) {
     .header {
         display: flex;
         height: 35vh;
@@ -803,22 +861,22 @@
         background-repeat: no-repeat; /* Prevents background image duplication */
       }
       .brand-name {
-        font-size: 1rem;
+        font-size: 1.5rem;
         text-align: center;
       }
       .logo {
-        width: 3rem;
+        width: 4rem;
         margin-bottom: 0.5rem;
       }
       .social-buttons {
         justify-content: center; /* Center social buttons */
         margin-top: 0.5rem; /* Adjust as needed */
-        margin-right: 6rem; /* Keep margin for positioning */
+        margin-right: 1rem; /* Keep margin for positioning */
         width: auto; /* Allow for proper width adjustment */
+        margin-left: 5rem;
       }
 }
 
-/* Tablet: 768×1024, 601×962 */
 @media (max-width: 768px) {
     .header {
         display: flex;
@@ -840,11 +898,119 @@
       .social-buttons {
         justify-content: center; /* Center social buttons */
         margin-top: 0.5rem; /* Adjust as needed */
-        margin-right: 8.5rem; /* Keep margin for positioning */
+        margin-right: 1rem; /* Keep margin for positioning */
         width: auto; /* Allow for proper width adjustment */
       }
   }
 
+
+  @media (max-width: 853px) {
+    .header {
+        display: flex;
+        height: 35vh;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 1rem;
+        text-align: center;
+      }
+      .logo {
+        width: 3rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        margin-right: 28rem; /* Keep margin for positioning */
+        width: auto; /* Allow for proper width adjustment */
+      }
+  }
+
+  @media (max-width: 820px) {
+    .header {
+        display: flex;
+        height: 40vh;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 1.5rem;
+        text-align: center;
+      }
+      .logo {
+        width: 4rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        margin-right: 0.1rem; /* Keep margin for positioning */
+        width: auto; /* Allow for proper width adjustment */
+      }
+  }
+
+
+
+  @media (max-width: 540px) {
+    .header {
+        display: flex;
+        
+        width: 100vh;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 1.5rem;
+        text-align: center;
+      }
+      .logo {
+        width: 4rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        
+        width: auto; /* Allow for proper width adjustment */
+      }
+}
+
+  @media (max-width: 430px) {
+    .header {
+      height: 40vh;
+      flex-direction: column; /* Stack elements vertically */
+      justify-content: flex-start; /* Align items at the top */
+      background-size: cover; /* Ensure image covers header */
+      background-position: center; /* Center the background image */
+      background-repeat: no-repeat; /* Prevents background image duplication */
+      width: 100vh;
+    }
+    .brand-name {
+      font-size: 2rem;
+      text-align: center;
+    }
+    .logo {
+      width: 4rem;
+      margin-bottom: 0.5rem;
+    }
+    .social-buttons {
+      justify-content: center; /* Center social buttons */
+      margin-top: 0.5rem; /* Adjust as needed */
+      margin-left: 3rem; /* Keep margin for positioning */
+      margin-right: 2rem; /* Keep margin for positioning */
+      width: auto; /* Allow for proper width adjustment */
+    }
+}
 
 @media (max-width: 425px) {
     .header {
@@ -874,6 +1040,59 @@
     }
 }
 
+@media (max-width: 414px) {
+    .header {
+      height: 40vh;
+      flex-direction: column; /* Stack elements vertically */
+      justify-content: flex-start; /* Align items at the top */
+      background-size: cover; /* Ensure image covers header */
+      background-position: center; /* Center the background image */
+      background-repeat: no-repeat; /* Prevents background image duplication */
+      width: 100vh;
+    }
+    .brand-name {
+      font-size: 1rem;
+      text-align: center;
+    }
+    .logo {
+      width: 3rem;
+      margin-bottom: 0.5rem;
+    }
+    .social-buttons {
+      justify-content: center; /* Center social buttons */
+      margin-top: 0.5rem; /* Adjust as needed */
+      margin-left: 3rem; /* Keep margin for positioning */
+      margin-right: 1rem; /* Keep margin for positioning */
+      width: auto; /* Allow for proper width adjustment */
+    }
+}
+
+@media (max-width: 412px) {
+    .header {
+        display: flex;
+        height: 35vh;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 1.8rem;
+        text-align: center;
+      }
+      .logo {
+        width: 4rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        margin-right: 1rem; /* Keep margin for positioning */
+        width: auto; /* Allow for proper width adjustment */
+      }
+  }
+
 /* Mobile: 375×667, 414×736, 360×800, 390×844 */
 @media (max-width: 375px) and (max-height: 667px) {
     .header {
@@ -887,18 +1106,65 @@
       background-repeat: no-repeat; /* Prevents background image duplication */
     }
     .brand-name {
-      font-size: 1rem;
+      font-size: 1.5rem;
       text-align: center;
     }
     .logo {
-      width: 3rem;
+      width: 4rem;
       margin-bottom: 0.5rem;
     }
     .social-buttons {
         display: flex;
         justify-content: flex-end; 
         align-items: center;
-        
+        margin-right: 0.5rem; /* Keep margin for positioning */
+      }
+      .social-buttons .icon {
+        margin-left: 1.25rem; /* 20px -> 1.25rem */
+        color: white;
+        text-transform: uppercase;
+        font-size: 1.2em;
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 2rem;
+        height: 2rem;
+        margin: 0 10px;
+        vertical-align: middle;
+      }
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    .header {
+        background-size: cover; /* or adjust to contain */
+    }
+}
+
+  
+@media (max-width: 360px) and (max-height: 740px) {
+    .header {
+      height: 40vh;
+      flex-direction: column; /* Stack elements vertically */
+      justify-content: flex-start; /* Align items at the top */
+      background-size: cover; /* Ensure image covers header */
+      background-clip: content-box  /* Center the background image */;
+      background-position: contain; /* Center the background image */
+      background-position: center; /* Center the background image */
+      background-repeat: no-repeat; /* Prevents background image duplication */
+    }
+    .brand-name {
+      font-size: 2rem;
+      text-align: center;
+    }
+    .logo {
+      width: 4.5rem;
+      margin-bottom: 0.5rem;
+    }
+    .social-buttons {
+        display: flex;
+        justify-content: flex-end; 
+        align-items: center;
+        margin-right: 0.01rem; /* Keep margin for positioning */
       }
       .social-buttons .icon {
         margin-left: 1.25rem; /* 20px -> 1.25rem */
@@ -916,7 +1182,33 @@
       }
 }
 
-  
+
+@media (max-width: 344px) {
+    .header {
+        display: flex;
+        height: 35vh;
+        width: 100vh;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: flex-start; /* Align items at the top */
+        background-size: cover; /* Ensure image covers header */
+        background-position: center; /* Center the background image */
+        background-repeat: no-repeat; /* Prevents background image duplication */
+      }
+      .brand-name {
+        font-size: 1.5rem;
+        text-align: center;
+      }
+      .logo {
+        width: 4rem;
+        margin-bottom: 0.5rem;
+      }
+      .social-buttons {
+        justify-content: center; /* Center social buttons */
+        margin-top: 0.5rem; /* Adjust as needed */
+        margin-right: 13rem; /* Keep margin for positioning */
+        width: auto; /* Allow for proper width adjustment */
+      }
+}
     /* Desktop styles */
 
 
